# xiangting-py

./: .gitignore  Cargo.toml  Makefile  README.md  THIRD-PARTY-NOTICES.md  pyproject.toml  xiangting.pyi
.devcontainer/: devcontainer-lock.json  devcontainer.json  post-create.sh
.github/workflows/: CI.yml  docs.yml
docs/: conf.py  index.rst  requirements-docs.txt
docs/internal/: __init__.py  conf.py  index.rst  xiangting.py
examples/: basic.py  closed_hand.py  melds.py  necessary_and_unnecessary_tiles.py  open_hand.py  player_4_and_3.py  three_player.py
scripts/: run_benchmarks.sh  run_benchmarks_kago.sh  run_benchmarks_mahjong.sh  run_benchmarks_xiangting.sh
src/: bingpai.rs  calculate.rs  config.rs  fulu_mianzi.rs  lib.rs  necessary_tiles.rs  replacement_number.rs  shoupai.rs  tile.rs  unnecessary_tiles.rs
tests/: test_calculate.py  test_error.py  test_fulu_mianzi.py  test_tile.py
tests/benches/: __init__.py  random_hand.py  test_bench.py  test_bench_kago.py  test_bench_mahjong.py  test_bench_xiangting.py
