[package]
name = "xiangting-py"
version = "5.0.3"
description = "Python bindings for xiangting"
authors = ["Apricot S."]
edition = "2024"
rust-version = "1.85"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Apricot-S/xiangting-py"
keywords = ["mahjong", "riichi", "shanten", "xiangting"]
categories = ["algorithms"]
exclude = [
    "/.devcontainer/**/*",
    "/.github/**/*",
    "/docs/**/*",
    "/examples/**/*",
    "/scripts/**/*",
    "/tests/**/*",
    "/.gitignore",
    "/Makefile",
]

[lib]
name = "xiangting"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.1", features = ["extension-module"] }
xiangting = "5.0.4"
